--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shortbeyond",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -22,6 +23,7 @@
     "@faker-js/faker": "^10.2.0",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "pg": "^8.17.2"
   }
 }
